# anland

./: CMakeLists.txt  README.md  build_and_install.sh  build_consumer.sh  build_daemon_android.sh  build_magisk_module.sh  cross-aarch64-linux-gnu.ini  pack_src.sh
android_consumer/: settings.gradle
android_consumer/app/: build.gradle
android_consumer/app/src/main/: AndroidManifest.xml
android_consumer/app/src/main/java/com/virtual_drm/consumer/: MainActivity.java
android_consumer/app/src/main/jni/: CMakeLists.txt  anw_hidden.h  native_consumer.c
common/: protocol.h
consumers/anland_v5/android_consumer/app/src/main/java/com/anland/consumer/: ExtraKeysBar.java  MainActivity.java  SettingsActivity.java
consumers/anland_v5/android_consumer/app/src/main/jni/: native_audio.c
daemon/: daemon.c
libdisplay_consumer/: display_consumer.c
libdisplay_producer/: display_producer.c  display_producer.h
magisk_module/: display_daemon  module.prop
producers/kde/Arch_v5/: build.sh
tests/: run_glxgears.sh  test_sdl_consumer.c
weston/: meson.build  meson_options.txt
weston/frontend/: config-helpers.c  main.c
weston/include/libweston/: backend-virtual-drm.h  libweston.h  meson.build
weston/libweston/: compositor.c  meson.build
weston/libweston/backend-virtual-drm/: meson.build  virtual-drm.c
weston/subprojects/: edid-decode.wrap
